@@ -1,4 +1,5 @@
 v0.7.2 - Pending
+	+ Allow user formatting for current playlist, library, and title
 	+ Bug: Fix crash if changing connection w/o gnome-python-extras
 
 v0.7.1 - September 27, 2006
